fix survey form name overflow

--- a/src/app/widget/widget.component.scss
+++ b/src/app/widget/widget.component.scss
@@ -2616,7 +2616,7 @@ mat-spinner {
 
 .survey_link {
   color: #007bff;
-  position: absolute;
+  position: relative;
   bottom: 15%;
   text-decoration: none;
 
